objects/CN_Comment__c.object
<CustomObject>
    <fields>
        <fullName>CN_Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CN_Is_Finance__c</fullName>
        <formula>CreatedBy.CN_Is_Finance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN Is Finance</label>
        <type>Checkbox</type>
    </fields>
    <label>Comment</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <recordTypes>
        <fullName>CN_Comment</fullName>
        <active>true</active>
        <label>CN Comment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>